# Ex4-cpp

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  temp.cpp
io/: TestNCompilation_1.cpp  TestPCompilation_1.cpp  TestPCompilation_10.cpp  TestPCompilation_11.cpp  TestPCompilation_12.cpp  TestPCompilation_2.cpp  TestPCompilation_3.cpp  TestPCompilation_4.cpp  TestPCompilation_5.cpp  TestPCompilation_6.cpp  TestPCompilation_7.cpp  TestPCompilation_8.cpp  TestPCompilation_9.cpp  Test_1.cpp  Test_10.cpp  Test_11.cpp  Test_12.cpp  Test_13.cpp  Test_14.cpp  Test_15.cpp  Test_16.cpp  Test_17.cpp  Test_18.cpp  Test_19.cpp  Test_2.cpp  Test_20.cpp  Test_21.cpp  Test_22.cpp  Test_23.cpp  Test_24.cpp  Test_25.cpp  Test_26.cpp  Test_27.cpp  Test_28.cpp  Test_29.cpp  Test_3.cpp  Test_30.cpp  Test_31.cpp  Test_32.cpp  Test_33.cpp  (+7 more)
